media/css/main.css
/* ... */
/** DARK COLOR (overrides only) **/
@media (prefers-color-scheme: dark) {
  :root  {
    --a-fg-color: #2b6da3;
    --a-highlight-fg-color: #50b0f0;
    --alert-warning-bg-color: #bcb5b5;
    --alert-warning-bdr-color: #bcb5b5;
    --b-fg-color: #f3f5f9;
    --body-bg-color: #212121;
    --body-fg-color: #f3f5f9;
    --btn-download-bdr-color: #2b6da3;
    --btn-download-decoration-bdr-color: #d4d4d4;
    --btn-download-decoration-bg-color: #4a4a4a;
    --btn-download-fg-color: #2b6da3;
    --btn-primary-bdr-color: #2b6da3;
    --btn-primary-bg-color: #2b6da3;
    --btn-light-bdr-color: #ccc;
    --btn-light-bg-color: #d4d4d4;
    --btn-light-fg-color: rgb(1, 1, 1);
    --button-input-bdr-color: #6b6b6b;
    --button-input-bg-color: #4a4a4a;
    --button-input-fg-color: #f3f5f9;
    --custom-select-bdr-color: #6b6b6b;
    --custom-select-bg-color: #4a4a4a;
    --custom-select-fg-color: #f3f5f9;
    --cta-header-fg-color: #f3f5f9;
    --doccontent-blockquote-table-note-bdr-color: #84c578;
    --doccontent-blockquote-table-note-bg-color: #4a4a4a;
    --doccontent-blockquote-table-tip-bdr-color: #84c578;
    --doccontent-blockquote-table-tip-bg-color: #4a4a4a;
    --doccontent-callout-fg-color: #f3f5f9;
    --doccontent-pre-code-bg-color: #4a4a4a;
    --doccontent-table-bdr-color: #6b6b6b;
    --doccontent-table-bg-color: #4a4a4a;
    --doccontent-table-td-bdr-color: #6b6b6b;
    --doccontent-table-td-bg-color: #212121;
    --doccontent-table-td-fg-color: #f3f5f9;
    --doccontent-table-th-bdr-color: #6b6b6b;
    --doccontent-table-th-bg-color: #6b6b6b;
    --doccontent-table-th-fg-color: #f3f5f9;
    --footer-a-fg-color: #2b6da3;
    --h2-decoration-bg-color: #6b6b6b;
    --header-fg-color: #2b6da3;
    --hr-bdr-color: #6b6b6b;
    --i-fas-search-fg-color: #f3f5f9;
    --navbar-bg-color: #212121;
    --navbar-fg-color: #f3f5f9;
    --navbar-toggler-img: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(243, 245, 249, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
    --pg-bg-gray-color: #2e2e2e;
    --pg-shoutbox-bg-color: #2b6da3;
    --pg-sidenav-a-fg-color: #2b6da3;
    --pgcontent-a-decoration-fg-color: #50b0f0;
    --pgcontent-doccontent-a-fg-color: #2b6da3;
    --pgcontent-fa-fg-color: #6b6b6b;
    --table-td-bdr-color: #4a4a4a;
    --table-td-fg-color: #f3f5f9;
    --table-th-bdr-color: #4a4a4a;
    --table-th-bg-color: #303030;
    --table-th-fg-color: #f3f5f9;
    --td-fm-no-bg-color: #ff8882;
    --td-fm-no-fg-color: #000;
    --td-fm-obs-fg-color: #000;
    --td-fm-unk-fg-color: #000;
    --td-fm-yes-bg-color: #89ff96;
    --td-fm-yes-fg-color: #000;
  }
}


/** GLOBAL CONFIGURATION */
body {
  font-family: 'Open Sans', sans-serif;
  font-weight: 400;
  color: var(--body-fg-color);
  background-color: var(--body-bg-color);
  font-size: 11.5pt;
}

input, select, textarea, .btn-default {
  background-color: var(--button-input-bg-color) !important;
  border-color: var(--button-input-bdr-color) !important;
  color: var(--button-input-fg-color) !important;
}

.table th {
  background-color: var(--table-th-bg-color);
  border-color: var(--table-th-bdr-color) !important;
  color: var(--table-th-fg-color);
}

/* We need to do this otherwise the striping on the feature matrix will break */
/* unless someone brighter than me can figure it out of course. */
@media (prefers-color-scheme: dark) {
  .table th {
    background-color: var(--table-th-bg-color) !important;
  }
}

.table td {
  background-color: var(--table-td-bg-color);
  border-color: var(--table-td-bdr-color);
  color: var(--table-td-fg-color);
}

p {
  margin-bottom: 0.5rem;
}

dl, ol, ul {
  margin-bottom: 0.5rem;
}

.table td, .table th {
  padding: 0.5rem;
}

h1, h2, h3, h4, h5, h6 {
  font-family: 'Open Sans', sans-serif;
  font-weight: 600;
  color: var(--header-fg-color);
  /*margin: 0 0 0.5em 0;*/
}

h2 {
  font-size: 1.6em;
  margin: 1em 0;
}

h3 {
  font-size: 1.4em;
  font-weight: initial;
}

.h4, h4 {
  font-size: 1.1rem;
  text-transform: capitalize !important;
}

.h5, h5 {
  font-size: 0.98rem;
}

#pgContentWrap h2:after, #pgSideNav h2:after {
  background-color: var(--h2-decoration-bg-color);
  content: '\a0';
  flex-grow: 1;
  height: 2px;
  position: relative;
  margin: .5em 0 .5em .75em;
}

#pgContentWrap h2, #pgSideNav h2 {
  display: flex;
  flex-direction: row;
}

h2.centered-lines {
  display: flex;
  flex-direction: row;
  justify-content: center;
  text-align: center;
}

h2.centered-lines:after, h2.centered-lines:before {
  background-color: var(--h2-decoration-bg-color);
  content: '\a0';
  flex-grow: 1;
  height: 2px;
  position: relative;
  margin: 0.5em 0;
}

h2.centered-lines:after {
  margin-left: 0.75em;
}

h2.centered-lines:before {
  margin-right: 0.75em;
}

h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
  text-decoration: none;
  color: var(--header-a-fg-color);
}

a, .news a {
  color: var(--a-fg-color);
  font-weight: 600;
  text-decoration: none;
  -moz-transition: color .2s ease-in-out;
  -webkit-transition: color .2s ease-in-out;
  -ms-transition: color .2s ease-in-out;
  transition: color .2s ease-in-out;
}

a:hover, a:active {
  color: var(--a-highlight-fg-color);
  text-decoration: none;
}

b, strong, th {
  font-weight: 600;
  color: var(--b-fg-color) !important;
}

i, em {
  font-style: italic;
}

sub {
  position: relative;
  top: 0.5em;
  font-size: 0.8em;
}

sup {
  position: relative;
  top: -0.5em;
  font-size: 0.8em;
}

hr {
  border: 0;
  border-top: solid 2px var(--hr-bdr-color);
  margin: 0 0 3em 0;
}

.image {
  width: 100%;
  margin: 1em 0 2em 0;
}

/**
p, ul, ol, dl, table {
  margin-bottom: 3em;
}*/

/** Global styles */

.pg-bg-blue {
  background-color: var(--pg-bg-blue-color);
}

.pg-bg-light-blue {
  background-color: var(--pg-bg-light-blue-color);
}

.pg-bg-purple {
  background-color: var(--pg-bg-purple-color);
}
/* ... */

